--- a/src/pages/profile/profile.hbs
+++ b/src/pages/profile/profile.hbs
@@ -7,56 +7,83 @@
       <img src="/src/images/default-avatar.png" class="profile__avatar-image" alt="avatar">
     </button>
     <h2 class="profile__name">Иван</h2>
-    <form name="profile-common" class="profile__form">
+    <form name="profileCommon" class="profile__form">
       <fieldset class="profile__fields">
-        <label class="profile__field">
-          <span class="profile__label">Почта</span>
-          <input disabled class="profile__input" name="email" value="pochta@yandex.ru" type="email">
-        </label>
-        <label class="profile__field">
-          <span class="profile__label">Логин</span>
-          <input disabled class="profile__input" name="login" value="ivanivanov" type="text">
-        </label>
-        <label class="profile__field">
-          <span class="profile__label">Имя</span>
-          <input disabled class="profile__input" name="first_name" value="Иван" type="text">
-        </label>
-        <label class="profile__field">
-          <span class="profile__label">Фамилия</span>
-          <input disabled class="profile__input" name="last_name" value="Иванов" type="text">
-        </label>
-        <label class="profile__field">
-          <span class="profile__label">Имя в чате</span>
-          <input disabled class="profile__input" name="display_name" value="Иван" type="text">
-        </label>
-        <label class="profile__field">
-          <span class="profile__label">Телефон</span>
-          <input disabled class="profile__input" name="phone" value="+7 (909) 967 30 30" type="tel">
-        </label>
+        {{> Field
+            block="profile"
+            label="Почта"
+            name="email"
+            type="email"
+            otherAtributes="required disabled value='pochta@yandex.ru'"
+        }}
+        {{> Field
+            block="profile"
+            label="Логин"
+            name="login"
+            type="text"
+            otherAtributes="required disabled value='ivanivanov' minlength='2' maxlength='40'"
+        }}
+        {{> Field
+            block="profile"
+            label="Имя"
+            name="first_name"
+            type="text"
+            otherAtributes="required disabled value='Иван' minlength='2' maxlength='40'"
+        }}
+        {{> Field
+            block="profile"
+            label="Фамилия"
+            name="last_name"
+            type="text"
+            otherAtributes="required disabled value='Иванов' minlength='2' maxlength='40'"
+        }}
+        {{> Field
+            block="profile"
+            label="Имя в чате"
+            name="display_name"
+            type="text"
+            otherAtributes="required disabled value='Иван' minlength='2' maxlength='40'"
+        }}
+        {{> Field
+            block="profile"
+            label="Телефон"
+            name="phone"
+            type="tel"
+            otherAtributes="required disabled value='+7 (909) 967 30 30' minlength='2' maxlength='40'"
+        }}
       </fieldset>
-      <div class="profile__actions">
+      <div class="profile__actions" id="profile-options">
         <button class="profile__button profile__button_change" id="edit-common-data-button" type="button">Изменить данные</button>
         <button class="profile__button profile__button_change" id="edit-password-button" type="button">Изменить пароль</button>
         <button class="profile__button profile__button_exit" id="sing-out-button" type="button">Выйти</button>
       </div>
-      <div class="profile__actions profile__actions_hide">
+      <div class="profile__actions profile__actions_hide" id="common-data-submit-action">
         {{> Button type="submit" text="Сохранить"}}
       </div>
     </form>
-    <form name="profile-password" class="profile__form profile__form_hide">
+    <form name="profilePassword" class="profile__form profile__form_hide">
       <fieldset class="profile__fields">
-        <label class="profile__field">
-          <span class="profile__label">Старый пароль</span>
-          <input disabled class="profile__input" name="oldpassword" type="password">
-        </label>
-        <label class="profile__field">
-          <span class="profile__label">Новый пароль</span>
-          <input disabled class="profile__input" name="newpassword" type="password">
-        </label>
-        <label class="profile__field">
-          <span class="profile__label">Повторите новый пароль</span>
-          <input disabled class="profile__input" name="repeat-password" type="password">
-        </label>
+        {{> Field
+            block="profile"
+            label="Старый пароль"
+            name="oldpassword"
+            type="password"
+            otherAtributes="required minlength='8'"
+        }}
+        {{> Field
+            block="profile"
+            label="Новый пароль"
+            name="newpassword"
+            type="password"
+            otherAtributes="required minlength='8'"
+        }}
+        {{> Field
+            block="profile"
+            label="Повторите новый пароль"
+            name="repeat_password"
+            type="password"
+            otherAtributes="required minlength='8'"
+        }}
       </fieldset>
       <div class="profile__actions">
         {{> Button type="submit" text="Сохранить"}}
