--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -17,6 +17,12 @@
     width: 100%;
   }
 
+  &__form {
+    &_hide {
+      display: none;
+    }
+  }
+
   &__avatar {
     border-radius: 50%;
     aspect-ratio: 1/1;
@@ -44,6 +50,10 @@
     line-height: 16px;
     margin: 21px 0 60px 0;
     color: #1E1E1E;
+
+    &_hidden {
+      visibility: hidden;
+    }
   }
 
   &__fields {
@@ -96,6 +106,10 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+
+    &_hide {
+      display: none;
+    }
   }
 
   &__button {
