fix: fix imapges path

--- a/src/App.scss
+++ b/src/App.scss
@@ -33,7 +33,7 @@
     aspect-ratio: 1/1;
     width: 28px;
     background-color: #3369F3;
-    background-image: url(./images/arrow.svg);
+    background-image: url(/arrow.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 11px 10px;
