--- a/src/pages/messanger/messanger.hbs
+++ b/src/pages/messanger/messanger.hbs
@@ -4,7 +4,7 @@
     <form class="messanger__search-form" name="search">
       <label class="messanger__search-label">
         <span class="messanger__search-placeholder">
-          <img src="/src/images/search-icon.svg" class="messanger__search-icon" alt="search">
+          <img src="/search-icon.svg" class="messanger__search-icon" alt="search">
           <span class="messanger__search-text">Поиск</span>
         </span>
         <input class="messanger__search-input" name="search" placeholder=" " type="text">
@@ -14,7 +14,7 @@
       {{> ChatPreview
         element="li"
         name="Иван"
-        avatar="/src/images/default-avatar.png"
+        avatar="/default-avatar.png"
         lastTime="12:05"
         lastMessage="Изображение"
         unreadMessagesCount="6"
@@ -22,7 +22,7 @@
       {{> ChatPreview
           element="li"
           name="Иван"
-          avatar="/src/images/default-avatar.png"
+          avatar="/default-avatar.png"
           lastTime="12:05"
           lastMessage="Изображение"
           unreadMessagesCount="6"
@@ -30,7 +30,7 @@
       {{> ChatPreview
           element="li"
           name="Иван"
-          avatar="/src/images/default-avatar.png"
+          avatar="/default-avatar.png"
           lastTime="12:05"
           lastMessage="Изображение"
           unreadMessagesCount="6"
@@ -38,7 +38,7 @@
       {{> ChatPreview
           element="li"
           name="Иван"
-          avatar="/src/images/default-avatar.png"
+          avatar="/default-avatar.png"
           lastTime="12:05"
           lastMessage="Изображение"
           unreadMessagesCount="6"
@@ -46,7 +46,7 @@
       {{> ChatPreview
           element="li"
           name="Иван"
-          avatar="/src/images/default-avatar.png"
+          avatar="/default-avatar.png"
           lastTime="12:05"
           lastMessage="Изображение"
           unreadMessagesCount="6"
@@ -54,7 +54,7 @@
       {{> ChatPreview
           element="li"
           name="Иван"
-          avatar="/src/images/default-avatar.png"
+          avatar="/default-avatar.png"
           lastTime="12:05"
           lastMessage="Изображение"
           unreadMessagesCount="6"
@@ -62,7 +62,7 @@
       {{> ChatPreview
           element="li"
           name="Иван"
-          avatar="/src/images/default-avatar.png"
+          avatar="/default-avatar.png"
           lastTime="12:05"
           lastMessage="Изображение"
           unreadMessagesCount="6"
@@ -70,7 +70,7 @@
       {{> ChatPreview
           element="li"
           name="Иван"
-          avatar="/src/images/default-avatar.png"
+          avatar="/default-avatar.png"
           lastTime="12:05"
           lastMessage="Изображение"
           unreadMessagesCount="6"
@@ -78,7 +78,7 @@
       {{> ChatPreview
           element="li"
           name="Иван"
-          avatar="/src/images/default-avatar.png"
+          avatar="/default-avatar.png"
           lastTime="12:05"
           lastMessage="Изображение"
           unreadMessagesCount="6"
@@ -86,7 +86,7 @@
       {{> ChatPreview
           element="li"
           name="Иван"
-          avatar="/src/images/default-avatar.png"
+          avatar="/default-avatar.png"
           lastTime="12:05"
           lastMessage="Изображение"
           unreadMessagesCount="6"
@@ -94,7 +94,7 @@
       {{> ChatPreview
           element="li"
           name="Иван"
-          avatar="/src/images/default-avatar.png"
+          avatar="/default-avatar.png"
           lastTime="12:05"
           lastMessage="Изображение"
           unreadMessagesCount="6"
@@ -102,7 +102,7 @@
       {{> ChatPreview
           element="li"
           name="Иван"
-          avatar="/src/images/default-avatar.png"
+          avatar="/default-avatar.png"
           lastTime="12:05"
           lastMessage="Изображение"
           unreadMessagesCount="6"
@@ -110,7 +110,7 @@
       {{> ChatPreview
           element="li"
           name="Иван"
-          avatar="/src/images/default-avatar.png"
+          avatar="/default-avatar.png"
           lastTime="12:05"
           lastMessage="Изображение"
           unreadMessagesCount="6"
@@ -118,7 +118,7 @@
       {{> ChatPreview
           element="li"
           name="Иван"
-          avatar="/src/images/default-avatar.png"
+          avatar="/default-avatar.png"
           lastTime="12:05"
           lastMessage="Изображение"
           unreadMessagesCount="6"
@@ -126,7 +126,7 @@
       {{> ChatPreview
           element="li"
           name="Иван"
-          avatar="/src/images/default-avatar.png"
+          avatar="/default-avatar.png"
           lastTime="12:05"
           lastMessage="Изображение"
           unreadMessagesCount="6"
@@ -134,7 +134,7 @@
       {{> ChatPreview
           element="li"
           name="Иван"
-          avatar="/src/images/default-avatar.png"
+          avatar="/default-avatar.png"
           lastTime="12:05"
           lastMessage="Изображение"
           unreadMessagesCount="6"
@@ -142,7 +142,7 @@
       {{> ChatPreview
           element="li"
           name="Иван"
-          avatar="/src/images/default-avatar.png"
+          avatar="/default-avatar.png"
           lastTime="12:05"
           lastMessage="Изображение"
           unreadMessagesCount="6"
@@ -150,7 +150,7 @@
       {{> ChatPreview
           element="li"
           name="Иван"
-          avatar="/src/images/default-avatar.png"
+          avatar="/default-avatar.png"
           lastTime="12:05"
           lastMessage="Изображение"
           unreadMessagesCount="6"
@@ -160,19 +160,19 @@
   <div class="messanger__chat-window chat-window">
     <!--    <p class="chat-window__default-message">Выберите чат чтобы отправить сообщение</p>-->
     <header class="chat-window__header">
-      <img class="chat-window__avatar" src="/src/images/default-avatar.png" alt="avatar">
+      <img class="chat-window__avatar" src="/default-avatar.png" alt="avatar">
       <h3 class="chat-window__name">Вадим</h3>
       <button class="chat-window__options-button"></button>
       <ul id="chat-menu" class="menu chat-window__menu chat-window__menu_header">
         <li class="menu__item">
           <button id="button-add-user" type="button" class="menu__button">
-            <img class="menu__icon" src="/src/images/add-icon.svg" alt="">
+            <img class="menu__icon" src="/add-icon.svg" alt="">
             <span class="menu__text">Добавить пользователя</span>
           </button>
         </li>
         <li class="menu__item">
           <button id="button-delete-user" type="button" class="menu__button">
-            <img class="menu__icon" src="/src/images/delete-icon.svg" alt="">
+            <img class="menu__icon" src="/delete-icon.svg" alt="">
             <span class="menu__text">Удалить пользователя</span>
           </button>
         </li>
@@ -193,7 +193,7 @@
           Всего их было произведено 25 штук, одну из них недавно продали на аукционе за 45000 евро."
         }}
         {{> Message
-          src="/src/images/chat-image-template.png"
+          src="/chat-image-template.png"
           time="11:58"
           addictedClass="chat__message"
           source="incoming"
@@ -208,7 +208,7 @@
           time="12:00"
         }}
         {{> Message
-          src="/src/images/chat-image-template.png"
+          src="/chat-image-template.png"
           addictedClass="chat__message"
           time="12:05"
           status="send"
@@ -228,7 +228,7 @@
           Всего их было произведено 25 штук, одну из них недавно продали на аукционе за 45000 евро."
         }}
         {{> Message
-            src="/src/images/chat-image-template.png"
+            src="/chat-image-template.png"
             time="11:58"
             addictedClass="chat__message"
             source="incoming"
@@ -243,7 +243,7 @@
             time="12:00"
         }}
         {{> Message
-            src="/src/images/chat-image-template.png"
+            src="/chat-image-template.png"
             addictedClass="chat__message"
             time="12:05"
             status="send"
@@ -263,7 +263,7 @@
           Всего их было произведено 25 штук, одну из них недавно продали на аукционе за 45000 евро."
         }}
         {{> Message
-            src="/src/images/chat-image-template.png"
+            src="/chat-image-template.png"
             time="11:58"
             addictedClass="chat__message"
             source="incoming"
@@ -278,7 +278,7 @@
             time="12:00"
         }}
         {{> Message
-            src="/src/images/chat-image-template.png"
+            src="/chat-image-template.png"
             addictedClass="chat__message"
             time="12:05"
             status="send"
@@ -298,7 +298,7 @@
           Всего их было произведено 25 штук, одну из них недавно продали на аукционе за 45000 евро."
         }}
         {{> Message
-            src="/src/images/chat-image-template.png"
+            src="/chat-image-template.png"
             time="11:58"
             addictedClass="chat__message"
             source="incoming"
@@ -313,7 +313,7 @@
             time="12:00"
         }}
         {{> Message
-            src="/src/images/chat-image-template.png"
+            src="/chat-image-template.png"
             addictedClass="chat__message"
             time="12:05"
             status="send"
@@ -325,19 +325,19 @@
       <ul id="add-file-menu" class="menu chat-window__menu chat-window__menu_form">
         <li class="menu__item">
           <button type="button" id="button-add-media" class="menu__button">
-            <img class="menu__icon" src="/src/images/media-icon.svg" alt="">
+            <img class="menu__icon" src="/media-icon.svg" alt="">
             <span class="menu__text">Фото или Видео</span>
           </button>
         </li>
         <li class="menu__item">
           <button type="button" id="button-add-file" class="menu__button">
-            <img class="menu__icon" src="/src/images/file-menu-icon.svg" alt="">
+            <img class="menu__icon" src="/file-menu-icon.svg" alt="">
             <span class="menu__text">Файл</span>
           </button>
         </li>
         <li class="menu__item">
           <button type="button" id="button-add-location" class="menu__button">
-            <img class="menu__icon" src="/src/images/location-icon.svg" alt="">
+            <img class="menu__icon" src="/location-icon.svg" alt="">
             <span class="menu__text">Локация</span>
           </button>
         </li>
