--- a/src/pages/profile/profile.hbs
+++ b/src/pages/profile/profile.hbs
@@ -4,7 +4,7 @@
   </nav>
   <div class="profile__content">
     <button type="button" class="profile__avatar" id="edit-avatar-button">
-      <img src="/src/images/default-avatar.png" class="profile__avatar-image" alt="avatar">
+      <img src="/default-avatar.png" class="profile__avatar-image" alt="avatar">
     </button>
     <h2 class="profile__name">Иван</h2>
     <form name="profileCommon" class="profile__form">
