--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -79,7 +79,7 @@
     &_status {
       &_send:before {
         content: '';
-        background-image: url(../../images/send-icon.svg);
+        background-image: url(/send-icon.svg);
         background-repeat: no-repeat;
         background-size: contain;
         display: inline-block;
@@ -90,7 +90,7 @@
 
       &_read:before {
         content: '';
-        background-image: url(../../images/read-icon.svg);
+        background-image: url(/read-icon.svg);
         background-repeat: no-repeat;
         background-size: contain;
         display: inline-block;
