--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -5,7 +5,7 @@
   font-size: 13px;
   line-height: 13px;
   text-align: center;
-  background-color: #3369F3;
+  background-color: #3369f3;
   color: #fff;
   padding: 12px;
   border-radius: 8px;
