--- a/src/components/ErrorPage/ErrorPage.scss
+++ b/src/components/ErrorPage/ErrorPage.scss
@@ -10,7 +10,7 @@
     line-height: 40px;
     text-align: center;
     margin: 0 0 20px 0;
-    color: #1E1E1E;
+    color: #1e1e1e;
   }
 
   &__text {
@@ -20,7 +20,7 @@
     line-height: 20px;
     text-align: center;
     margin: 0 0 70px 0;
-    color: #1E1E1E;
+    color: #1e1e1e;
   }
 
   &__link {
@@ -30,6 +30,6 @@
     font-size: 11px;
     line-height: 11px;
     text-align: center;
-    color: #3369F3;
+    color: #3369f3;
   }
 }
