--- a/src/components/Link/Link.hbs
+++ b/src/components/Link/Link.hbs
@@ -1,1 +1,1 @@
-<a href="{{href}}" class="{{class}}" data-page="{{page}}">{{text}}</a>
+<a href='{{href}}' class='{{class}}' data-page='{{page}}'>{{text}}</a>
