--- a/src/components/Button/Button.hbs
+++ b/src/components/Button/Button.hbs
@@ -1,1 +1,1 @@
-<button class="button {{addedClasses}}" type="{{type}}">{{text}}</button>
+<button class='button {{addedClasses}}' type='{{type}}'>{{text}}</button>
