--- a/src/components/ChatPreview/ChatPreview.scss
+++ b/src/components/ChatPreview/ChatPreview.scss
@@ -3,12 +3,12 @@
   grid-template-columns: 47px 1fr;
   gap: 10px;
   padding: 12px 0;
-  border-top: 1px solid #EAEAEA;
+  border-top: 1px solid #eaeaea;
 
   &__avatar {
     width: 100%;
     border-radius: 50%;
-    background-color: #EFEFEF;
+    background-color: #efefef;
     aspect-ratio: 1/1;
   }
 
@@ -35,7 +35,7 @@
     font-weight: 600;
     font-size: 13px;
     line-height: 13px;
-    color: #1E1E1E;
+    color: #1e1e1e;
   }
 
   &__time {
@@ -63,7 +63,7 @@
     font-size: 11px;
     line-height: 11px;
     color: #fff;
-    background-color: #3369F3;
+    background-color: #3369f3;
     border-radius: 50%;
     padding: 4px;
     aspect-ratio: 1/1;
