--- a/src/components/Field/Field.hbs
+++ b/src/components/Field/Field.hbs
@@ -1,4 +1,9 @@
 <label class='{{block}}__field'>
-  <span class="{{block}}__label">{{label}}</span>
-  <input class="{{block}}__input" name="{{name}}" type="{{type}}" {{{otherAtributes}}}>
+  <span class='{{block}}__label'>{{label}}</span>
+  <input
+    class='{{block}}__input'
+    name='{{name}}'
+    type='{{type}}'
+    {{otherAtributes}}
+  />
 </label>
