--- a/src/pages/messanger/messanger.scss
+++ b/src/pages/messanger/messanger.scss
@@ -42,7 +42,7 @@
     display: flex;
     gap: 10px;
     padding: 10px;
-    background-color: #EFEFEF;
+    background-color: #efefef;
     font-family: 'Inter', sans-serif;
     font-weight: 500;
     font-size: 12px;
@@ -84,7 +84,7 @@
     font-size: inherit;
     line-height: inherit;
     padding: 0;
-    
+
     &:placeholder-shown {
       position: absolute;
     }
@@ -180,8 +180,8 @@
 
   &__chat {
     flex: 1;
-    border-top: 1px solid #EAEAEA;
-    border-bottom: 1px solid #EAEAEA;
+    border-top: 1px solid #eaeaea;
+    border-bottom: 1px solid #eaeaea;
     padding: 30px 0;
     max-height: 100%;
     overflow: auto;
@@ -211,14 +211,14 @@
   &__message-input {
     flex: 1;
     border: none;
-    background-color: #EFEFEF;
+    background-color: #efefef;
     border-radius: 30px;
     padding: 0 20px;
     font-family: 'Inter', sans-serif;
     font-weight: 500;
     font-size: 12px;
     line-height: 12px;
-    color: #1E1E1E;
+    color: #1e1e1e;
 
     &:focus-visible {
       outline: none;
@@ -233,7 +233,7 @@
     border-radius: 50%;
     aspect-ratio: 1/1;
     width: 32px;
-    background-color: #3369F3;
+    background-color: #3369f3;
     padding: 0;
     border: none;
     background-image: url(/arrow.svg);
@@ -318,6 +318,6 @@
     font-weight: 500;
     font-size: 12px;
     line-height: 14px;
-    color: #1E1E1E;
+    color: #1e1e1e;
   }
 }
